# objutils

./: CMakeLists.txt
src/: objloader.c  objloader.h  objmodel.c  objmodel.h  objrender.c
tests/: objloadertest.c  testload.c
